Добавлены другие модели в Homework 2

--- a/Homework 2/HW2 (Linear Classifier with Modified Features).ipynb
+++ b/Homework 2/HW2 (Linear Classifier with Modified Features).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,39 +22,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# y_train_porn = train_df[train_df.target == True].target\n",
+    "# y_train_regular = train_df[train_df.target == False].target\n",
+    "# y_train = y_train_porn.append(y_train_regular)\n",
+    "# X_train_porn = train_df[train_df.target == True].drop(columns=[\"target\"])\n",
+    "# X_train_regular = train_df[train_df.target == False].drop(columns=[\"target\"])\n",
     "y_train = train_df.target\n",
     "X_train = train_df.drop(columns=[\"target\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
     "def remove_digits(DF):\n",
-    "    for i in np.arange(len(DF)):\n",
+    "    for i in DF.index:\n",
     "        DF[i] = re.sub(r\"\\d+\", \"\", DF[i], flags=re.UNICODE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = X_train[['url', 'title']].apply(lambda x:x[0] + \" \" + x[1] + \" \" + \"default\", axis=1)\n",
+    "# X_train_porn = X_train_porn[['url', 'title']].apply(lambda x:x[0] + \" \" + x[1], axis=1)\n",
+    "# X_train_regular = X_train_regular[['url', 'title']].apply(lambda x:x[0] + \" \" + x[1], axis=1)\n",
+    "X_train = X_train[['url', 'title']].apply(lambda x:x[0] + \" \" + x[1], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remove_digits(X_train_porn)\n",
+    "# remove_digits(X_train_regular)\n",
     "remove_digits(X_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +191,7 @@
        "9                   Anomaly Defenders v1.0 – торрент  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,16 +222,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train_vectorized = vectorizer.fit_transform(X_train)"
+    "X_train_vectorized = vectorizer.fit_transform(X_train) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -244,71 +261,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-- Epoch 1\n",
-      "Norm: 98.06, NNZs: 25545, Bias: -0.316418, T: 101481, Avg. loss: 1.538629\n",
-      "Total training time: 0.04 seconds.\n",
-      "-- Epoch 2\n",
-      "Norm: 53.67, NNZs: 34513, Bias: -0.327994, T: 202962, Avg. loss: 0.043491\n",
-      "Total training time: 0.09 seconds.\n",
-      "-- Epoch 3\n",
-      "Norm: 37.89, NNZs: 42221, Bias: -0.329142, T: 304443, Avg. loss: 0.014361\n",
-      "Total training time: 0.13 seconds.\n",
-      "-- Epoch 4\n",
-      "Norm: 30.43, NNZs: 51024, Bias: -0.330487, T: 405924, Avg. loss: 0.008914\n",
-      "Total training time: 0.18 seconds.\n",
-      "-- Epoch 5\n",
-      "Norm: 26.56, NNZs: 58417, Bias: -0.331242, T: 507405, Avg. loss: 0.008288\n",
-      "Total training time: 0.23 seconds.\n",
-      "-- Epoch 6\n",
-      "Norm: 24.40, NNZs: 64369, Bias: -0.332908, T: 608886, Avg. loss: 0.008410\n",
-      "Total training time: 0.28 seconds.\n",
-      "-- Epoch 7\n",
-      "Norm: 23.14, NNZs: 68765, Bias: -0.332581, T: 710367, Avg. loss: 0.008613\n",
-      "Total training time: 0.32 seconds.\n",
-      "-- Epoch 8\n",
-      "Norm: 22.33, NNZs: 71908, Bias: -0.333522, T: 811848, Avg. loss: 0.008551\n",
-      "Total training time: 0.37 seconds.\n",
-      "-- Epoch 9\n",
-      "Norm: 21.80, NNZs: 74371, Bias: -0.333123, T: 913329, Avg. loss: 0.008522\n",
-      "Total training time: 0.42 seconds.\n",
-      "Convergence after 9 epochs took 0.42 seconds\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "SGDClassifier(alpha=0.0001, average=False, class_weight='balanced',\n",
-       "              early_stopping=False, epsilon=1e-15, eta0=0.0, fit_intercept=True,\n",
-       "              l1_ratio=0.15, learning_rate='optimal', loss='modified_huber',\n",
-       "              max_iter=1000, n_iter_no_change=5, n_jobs=None, penalty='l2',\n",
-       "              power_t=0.5, random_state=None, shuffle=True, tol=0.001,\n",
-       "              validation_fraction=0.1, verbose=2, warm_start=False)"
+       "LogisticRegression(C=1.0, class_weight='balanced', dual=False,\n",
+       "                   fit_intercept=True, intercept_scaling=1, l1_ratio=None,\n",
+       "                   max_iter=100, multi_class='auto', n_jobs=None, penalty='l2',\n",
+       "                   random_state=None, solver='lbfgs', tol=0.0001, verbose=0,\n",
+       "                   warm_start=False)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.linear_model import SGDClassifier\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.metrics import accuracy_score, f1_score, make_scorer\n",
-    "linear_model = SGDClassifier(loss='modified_huber', epsilon=1e-15, class_weight=\"balanced\", n_iter_no_change=5, verbose=2)\n",
-    "# print(cross_val_score(linear_model, X_train_vectorized, y_train, cv=5, scoring=make_scorer(f1_score, labels=[2])))\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "linear_model = LogisticRegression(class_weight='balanced')\n",
     "linear_model.fit(Data_train, Ans_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {
     "scrolled": true
    },
@@ -317,12 +296,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.9941468605888613\n",
-      "F1 score: 0.9766068052930056\n"
+      "Accuracy: 0.9932008986638288\n",
+      "F1 score: 0.9726711026615971\n"
      ]
     }
    ],
    "source": [
+    "from sklearn.metrics import accuracy_score, f1_score\n",
     "y_pred = linear_model.predict(Data_test)\n",
     "print(\"Accuracy:\", accuracy_score(y_pred, Ans_test))\n",
     "print(\"F1 score:\", f1_score(y_pred, Ans_test))"
@@ -330,71 +310,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-- Epoch 1\n",
-      "Norm: 75.11, NNZs: 30354, Bias: -1.017021, T: 135309, Avg. loss: 0.963499\n",
-      "Total training time: 0.07 seconds.\n",
-      "-- Epoch 2\n",
-      "Norm: 41.30, NNZs: 42822, Bias: -0.903057, T: 270618, Avg. loss: 0.024672\n",
-      "Total training time: 0.13 seconds.\n",
-      "-- Epoch 3\n",
-      "Norm: 30.55, NNZs: 58774, Bias: -0.822973, T: 405927, Avg. loss: 0.011365\n",
-      "Total training time: 0.20 seconds.\n",
-      "-- Epoch 4\n",
-      "Norm: 26.04, NNZs: 70450, Bias: -0.793641, T: 541236, Avg. loss: 0.009953\n",
-      "Total training time: 0.26 seconds.\n",
-      "-- Epoch 5\n",
-      "Norm: 23.94, NNZs: 78504, Bias: -0.778466, T: 676545, Avg. loss: 0.010057\n",
-      "Total training time: 0.33 seconds.\n",
-      "-- Epoch 6\n",
-      "Norm: 22.85, NNZs: 83838, Bias: -0.765199, T: 811854, Avg. loss: 0.009743\n",
-      "Total training time: 0.39 seconds.\n",
-      "-- Epoch 7\n",
-      "Norm: 22.16, NNZs: 87504, Bias: -0.769855, T: 947163, Avg. loss: 0.010056\n",
-      "Total training time: 0.47 seconds.\n",
-      "-- Epoch 8\n",
-      "Norm: 21.79, NNZs: 89799, Bias: -0.761993, T: 1082472, Avg. loss: 0.010054\n",
-      "Total training time: 0.55 seconds.\n",
-      "-- Epoch 9\n",
-      "Norm: 21.49, NNZs: 91510, Bias: -0.764739, T: 1217781, Avg. loss: 0.009971\n",
-      "Total training time: 0.62 seconds.\n",
-      "-- Epoch 10\n",
-      "Norm: 21.30, NNZs: 92785, Bias: -0.766664, T: 1353090, Avg. loss: 0.010058\n",
-      "Total training time: 0.69 seconds.\n",
-      "-- Epoch 11\n",
-      "Norm: 21.17, NNZs: 93730, Bias: -0.761149, T: 1488399, Avg. loss: 0.009896\n",
-      "Total training time: 0.75 seconds.\n",
-      "-- Epoch 12\n",
-      "Norm: 21.06, NNZs: 94583, Bias: -0.764614, T: 1623708, Avg. loss: 0.009942\n",
-      "Total training time: 0.81 seconds.\n",
-      "-- Epoch 13\n",
-      "Norm: 20.98, NNZs: 95162, Bias: -0.764342, T: 1759017, Avg. loss: 0.009879\n",
-      "Total training time: 0.88 seconds.\n",
-      "-- Epoch 14\n",
-      "Norm: 20.91, NNZs: 95524, Bias: -0.762002, T: 1894326, Avg. loss: 0.009789\n",
-      "Total training time: 0.94 seconds.\n",
-      "Convergence after 14 epochs took 0.94 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "linear_model = SGDClassifier(loss='modified_huber', class_weight=\"balanced\", n_iter_no_change=10, verbose=2)\n",
-    "linear_model.fit(X_train_vectorized, y_train)\n",
-    "X_test = test_df.drop(columns=[])\n",
-    "X_test = X_test[['url', 'title']].apply(lambda x:x[0] + \" \" + x[1], axis=1)\n",
-    "remove_digits(X_test)\n",
-    "X_test_vectorized = vectorizer.transform(X_test)"
+    "# linear_model = SGDClassifier(loss='modified_huber', class_weight=\"balanced\", n_iter_no_change=10, verbose=2)\n",
+    "# linear_model.fit(X_train_vectorized, y_train)\n",
+    "# X_test = test_df.drop(columns=[])\n",
+    "# X_test = X_test[['url', 'title']].apply(lambda x:x[0] + \" \" + x[1], axis=1)\n",
+    "# remove_digits(X_test)\n",
+    "# X_test_vectorized = vectorizer.transform(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,25 +334,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0 0 0 ... 0 0 0]\n",
-      "['gorodrabot', 'ryazan']\n"
-     ]
-    }
-   ],
-   "source": [
-    "arr = vectorizer.transform([\"ryazan.gorodrabot.ru\"])\n",
-    "feature_names = np.array(vectorizer.get_feature_names())\n",
-    "x_vector = arr[0].toarray()[0]\n",
-    "print(x_vector)\n",
-    "print([feature for feature in feature_names[x_vector > 0]])"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
