--- a/Homework 2/HW2 (Linear Classifier).ipynb
+++ b/Homework 2/HW2 (Linear Classifier).ipynb
@@ -31,6 +31,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Обрабатываем данные: сливаем url и title в одну строку, удаляем цифры и векторизуем, игнорируя стоп-слова"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -56,165 +63,27 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>url</th>\n",
-       "      <th>title</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>135309</td>\n",
-       "      <td>www.kommersant.ru</td>\n",
-       "      <td>Шестой кассационный суд в Самаре начнет работу...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>135310</td>\n",
-       "      <td>urexpert.online</td>\n",
-       "      <td>Что такое индексация алиментов, кем и в каких ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>135311</td>\n",
-       "      <td>imperimeha.ru</td>\n",
-       "      <td>Женщинам | Империя Меха - Part 12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>135312</td>\n",
-       "      <td>national-porn.com</td>\n",
-       "      <td>Небритые, волосатые киски: Порно всех стран и ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>135313</td>\n",
-       "      <td>2gis.ru</td>\n",
-       "      <td>67</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>135314</td>\n",
-       "      <td>ryazan.gorodrabot.ru</td>\n",
-       "      <td>Вакансия Мерчендайзер визитный в Рязани, Групп...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>135315</td>\n",
-       "      <td>m.fotosklad.ru</td>\n",
-       "      <td>Смартфон Apple iPhone XR 64GB Черный A2105 EU ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>135316</td>\n",
-       "      <td>sim-dealer.ru</td>\n",
-       "      <td>Духовой шкаф Siemens HB337GYS0R - Sim-Dealer. ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>135317</td>\n",
-       "      <td>krasnoyarsk.hh.ru</td>\n",
-       "      <td>Вакансия Аналитик Департамента внедрения инфор...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>135318</td>\n",
-       "      <td>vsetop.org</td>\n",
-       "      <td>Anomaly Defenders v1.0 – торрент</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       id                   url  \\\n",
-       "0  135309     www.kommersant.ru   \n",
-       "1  135310       urexpert.online   \n",
-       "2  135311         imperimeha.ru   \n",
-       "3  135312     national-porn.com   \n",
-       "4  135313               2gis.ru   \n",
-       "5  135314  ryazan.gorodrabot.ru   \n",
-       "6  135315        m.fotosklad.ru   \n",
-       "7  135316         sim-dealer.ru   \n",
-       "8  135317     krasnoyarsk.hh.ru   \n",
-       "9  135318            vsetop.org   \n",
-       "\n",
-       "                                               title  \n",
-       "0  Шестой кассационный суд в Самаре начнет работу...  \n",
-       "1  Что такое индексация алиментов, кем и в каких ...  \n",
-       "2                  Женщинам | Империя Меха - Part 12  \n",
-       "3  Небритые, волосатые киски: Порно всех стран и ...  \n",
-       "4                                                 67  \n",
-       "5  Вакансия Мерчендайзер визитный в Рязани, Групп...  \n",
-       "6  Смартфон Apple iPhone XR 64GB Черный A2105 EU ...  \n",
-       "7  Духовой шкаф Siemens HB337GYS0R - Sim-Dealer. ...  \n",
-       "8  Вакансия Аналитик Департамента внедрения инфор...  \n",
-       "9                   Anomaly Defenders v1.0 – торрент  "
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "test_df.head(10)"
+    "from nltk.corpus import stopwords\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
+    "stop_words = set(stopwords.words('english') + stopwords.words('russian'))\n",
+    "\n",
+    "vectorizer = CountVectorizer(stop_words=stop_words)\n",
+    "X_train_vectorized = vectorizer.fit_transform(X_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Разбиваем датасет на две части, обучаемся и смотрим на качество"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from nltk.corpus import stopwords\n",
-    "stop_words = set(stopwords.words('english') + stopwords.words('russian'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "vectorizer = CountVectorizer(stop_words=stop_words)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train_vectorized = vectorizer.fit_transform(X_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -238,32 +107,31 @@
        "              validation_fraction=0.1, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.linear_model import SGDClassifier\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.metrics import accuracy_score, f1_score, make_scorer\n",
+    "from sklearn.metrics import accuracy_score, f1_score\n",
     "linear_model = SGDClassifier(loss='modified_huber', class_weight=\"balanced\")\n",
     "linear_model.fit(Data_train, Ans_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.9939103701076032\n",
-      "F1 score: 0.9755866319032946\n"
+      "Accuracy: 0.9940877379685468\n",
+      "F1 score: 0.9763369616658779\n"
      ]
     }
    ],
@@ -274,8 +142,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Обучаем модель на всех имеющихся данных"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
