Исправлена ошибка, связанная с обучением сразу двух моделей

--- a/Homework 5/HW5 (Stacking Regressor).ipynb
+++ b/Homework 5/HW5 (Stacking Regressor).ipynb
@@ -1243,7 +1243,7 @@
     "    estimator_name = \"GBR_\" + str(n)\n",
     "    models.append((estimator_name, estimator))\n",
     "    data_upd[estimator_name] = estimator.predict(data_upd)\n",
-    "    \n",
+    "data_upd.drop(columns=[\"Ridge\", \"GBR_600\", \"GBR_700\"], inplace=True)\n",
     "\n",
     "        \n",
     "# Второй вариант\n",
@@ -1268,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -1630,7 +1630,7 @@
        "[100000 rows x 694 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
