Добавлена полная прогонка ноутбучка

--- a/Homework 5/HW5 (Stacking Regressor).ipynb
+++ b/Homework 5/HW5 (Stacking Regressor).ipynb
@@ -1217,9 +1217,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Iter       Train Loss      OOB Improve   Remaining Time \n",
+      "         1 5260385763619.1875 771966945406.4580           38.28m\n",
+      "         2 4496090663740.6797 813569972792.5186           37.14m\n",
+      "         3 3820444172035.5601 644879745436.1919           35.41m\n",
+      "         4 3309909838906.1226 523105913818.2080           35.67m\n",
+      "         5 2870882537071.1650 428884000718.6836           35.75m\n",
+      "         6 2521197477938.2622 361867002438.0405           36.24m\n",
+      "         7 2226648537442.8711 292722287801.8318           36.34m\n",
+      "         8 1972420547469.9500 250411330924.2761           36.59m\n",
+      "         9 1755772840446.1560 209704321875.8672           36.97m\n",
+      "        10 1585266571317.7019 169452085659.8804           37.01m\n",
+      "        20 800171642890.2548 32533233979.2090           36.93m\n",
+      "        30 622883175048.3300  9326568462.2040           36.21m\n",
+      "        40 546871517958.8358  7223852026.3419           34.88m\n",
+      "        50 514954496601.8644  4559753347.2510           33.50m\n",
+      "        60 491992430980.2967  1159412696.7343           31.90m\n",
+      "        70 479817363972.4352   381638686.2253           29.75m\n",
+      "        80 473156800091.3147   273355734.8570           27.63m\n",
+      "        90 464256227112.1092   333644256.5959           26.05m\n",
+      "       100 454631183923.4882   390276707.1821           24.59m\n",
+      "       200 403744720691.9279   164144024.6331           16.21m\n",
+      "       300 374333624181.5046   147964650.9817           12.00m\n",
+      "       400 351713401004.9666    -2494038.4396            8.23m\n",
+      "       500 333912496174.7645    66354000.2441            4.22m\n",
+      "       600 323051990152.9754     3015943.6245            0.00s\n",
+      "      Iter       Train Loss      OOB Improve   Remaining Time \n",
+      "         1 5302333206899.7373 710411891404.4316           52.36m\n",
+      "         2 4411772041428.1680 852785208903.1084           51.56m\n",
+      "         3 3739888503063.6689 693169396283.8994           48.49m\n",
+      "         4 3205506818430.4448 541530822057.9038           48.33m\n",
+      "         5 2757334904805.0361 435084785427.7681           48.91m\n",
+      "         6 2364277963468.7778 372357658102.8042           49.79m\n",
+      "         7 2059419208638.3335 309283344430.8293           49.57m\n",
+      "         8 1805867703408.9912 261601982450.5703           49.82m\n",
+      "         9 1580876170004.6768 223936284668.3757           49.73m\n",
+      "        10 1388799671616.4358 184462610090.5771           49.85m\n",
+      "        20 516146691194.2783 38990249780.0278           48.58m\n",
+      "        30 363667907016.9850  6716900232.6255           47.90m\n",
+      "        40 320982711695.0635  1554320875.3734           46.22m\n",
+      "        50 301899808364.4465   639434576.6396           44.16m\n",
+      "        60 297503112708.3665   267259027.9681           42.13m\n",
+      "        70 292808812308.1337   130936073.5552           40.57m\n",
+      "        80 293692094675.3953   110257090.3793           38.81m\n",
+      "        90 291396544543.4796    -3450429.1477           37.30m\n",
+      "       100 288968700638.1990   -70714462.0215           35.96m\n",
+      "       200 274099330554.4575   -37434421.7327           28.40m\n",
+      "       300 265843281001.9427    69018776.6454           22.47m\n",
+      "       400 256287566272.0848    49705351.7802           16.61m\n",
+      "       500 246690694643.1460    54977302.9443           10.94m\n",
+      "       600 242458366655.8138   -18616336.4060            5.44m\n",
+      "       700 233080427427.4571    35151999.8685            0.00s\n",
+      "      Iter       Train Loss      OOB Improve   Remaining Time \n",
+      "         1 5320066097153.8340 697191341943.5391          143.03m\n",
+      "         2 4552095466068.8574 774998144485.7744          139.71m\n",
+      "         3 3844082001276.8120 643544359640.8882          137.92m\n",
+      "         4 3332617728711.9521 500852748231.5737          136.99m\n",
+      "         5 2894183652990.6714 427630297816.0171          137.03m\n",
+      "         6 2574632055762.8120 343694143417.2886          137.79m\n",
+      "         7 2234185237476.3384 301221952091.3140          137.52m\n",
+      "         8 1971934140785.6968 261677846184.3210          136.64m\n",
+      "         9 1766364980708.7812 215592942682.5674          136.59m\n",
+      "        10 1589270448476.4790 183893041539.9900          136.36m\n",
+      "        20 809756541111.6649 36524083136.4982          136.63m\n",
+      "        30 645914254969.8429  9867560226.0485          131.67m\n",
+      "        40 571742750730.8431  5489357878.4540          127.42m\n",
+      "        50 531315979324.0426  3920050629.7406          122.82m\n",
+      "        60 513277310546.0248  1192556926.3052          119.29m\n",
+      "        70 488828041829.4781   218114772.8907          116.08m\n",
+      "        80 481402511477.2875  1192514470.8712          113.61m\n",
+      "        90 476247653906.8278   416955266.3624          110.21m\n",
+      "       100 469042580680.2738   168335943.5001          108.15m\n",
+      "       200 414069770896.0848   420106304.0928           98.81m\n",
+      "       300 382324006736.5082   107172647.8705           90.96m\n",
+      "       400 360180498463.6573   -29256312.0804           84.62m\n",
+      "       500 342031925447.3536   -26902771.8839           78.71m\n",
+      "       600 326999033189.1965   -36574775.1707           72.49m\n",
+      "       700 312924732061.0159    35713009.1353           67.20m\n",
+      "       800 304349951369.4522    19156414.2770           61.76m\n",
+      "       900 292494781731.2982   -31271012.3339           56.52m\n",
+      "      1000 278960439355.4062    26013471.4832           51.31m\n",
+      "      2000 215586169864.6132    19415576.5595            0.00s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "StackingRegressor(cv=None,\n",
+       "                  estimators=[('Ridge',\n",
+       "                               Ridge(alpha=1.0, copy_X=True, fit_intercept=True,\n",
+       "                                     max_iter=None, normalize=False,\n",
+       "                                     random_state=None, solver='auto',\n",
+       "                                     tol=0.001))],\n",
+       "                  final_estimator=GradientBoostingRegressor(alpha=0.9,\n",
+       "                                                            ccp_alpha=0.0,\n",
+       "                                                            criterion='friedman_mse',\n",
+       "                                                            init=None,\n",
+       "                                                            learning_rate=0.1,\n",
+       "                                                            loss='huber',\n",
+       "                                                            max_depth=5,\n",
+       "                                                            max_features=None,\n",
+       "                                                            max_leaf_nodes=None,\n",
+       "                                                            min_impurity_decrease=0.0,\n",
+       "                                                            min_impurity_split=None,\n",
+       "                                                            min_samples_leaf=1,\n",
+       "                                                            min_samples_split=2,\n",
+       "                                                            min_weight_fraction_leaf=0.0,\n",
+       "                                                            n_estimators=2000,\n",
+       "                                                            n_iter_no_change=None,\n",
+       "                                                            presort='deprecated',\n",
+       "                                                            random_state=None,\n",
+       "                                                            subsample=0.8,\n",
+       "                                                            tol=0.0001,\n",
+       "                                                            validation_fraction=0.1,\n",
+       "                                                            verbose=1,\n",
+       "                                                            warm_start=False),\n",
+       "                  n_jobs=None, passthrough=True, verbose=0)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.ensemble import GradientBoostingRegressor, StackingRegressor\n",
     "from sklearn.linear_model import  Ridge\n",
@@ -1659,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1675,10 +1804,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "ans = pd.DataFrame(columns=[\"id\", \"price\"])\n",
     "ans['id'] = list(range(100000, 200000))\n",
     "\n",
     "# Ответы для первой модели записаны в файл SmirnovGS2.csv\n",
@@ -1689,6 +1819,13 @@
     "ans['price'] = pred_2\n",
     "ans.to_csv(\"SmirnovGS.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
