--- a/Homework 6/HW6.ipynb
+++ b/Homework 6/HW6.ipynb
@@ -177,15 +177,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "### Здесь код, который загружает сохраненную сеть и все необходимые данные через wget\n",
-    "with open(\"ids.pkl\", \"rb\") as inp:\n",
-    "    ids = pickle.load(inp)\n",
-    "with open(\"friends.pkl\", \"rb\") as inp:\n",
-    "    friends = pickle.load(inp)\n",
+    "!pip install wget\n",
+    "import wget\n",
+    "wget.download('https://yadi.sk/i/zajWVChIk_-T_A', \"degree.png\")\n",
+    "wget.download('https://yadi.sk/i/4o0W5o7zJNP2Hw', \"closeness.png\")\n",
+    "wget.download('https://yadi.sk/i/FCV-K3N4OwXmDA', \"betweenness.png\")\n",
+    "wget.download('https://yadi.sk/d/fjCrlMDKQ5vrwg', \"g.graphml\")\n",
+    "wget.download('https://yadi.sk/d/p6orN86gNRoFkA', \"ids.pkl\")\n",
+    "wget.download('https://yadi.sk/d/OBk0nQhAGynxiQ', \"friends.pkl\")\n",
+    "wget.download('https://yadi.sk/i/Db4gOJmb5Vqu5A', \"image2.png\")\n",
+    "\n",
     "G = nx.read_graphml(\"g.graphml\")"
    ]
   },
