Added most popular tokens

--- a/Homework 7/HW7.ipynb
+++ b/Homework 7/HW7.ipynb
@@ -612,6 +612,97 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Выведем по 5 наиболее значимых токенов для каждого языка"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ar:  ل  أ ة   ال ال  \n",
+      "az: də ən lə ər ə   \n",
+      "be: ць ы  ць  дз ў   \n",
+      "bg: ър  е съ  е  а   \n",
+      "bn:  ্  র  া  ি  ে   \n",
+      "bs: ij dj ije dje je  \n",
+      "cs: ní ně ře ě  í   \n",
+      "da: af   at   er   af  er   \n",
+      "de: ich  das ein ch ei  \n",
+      "el: ν   τ ι  ς  α   \n",
+      "en: d   the the  th th  \n",
+      "eo: oj  ĝi j   ĉ aŭ  \n",
+      "es:  y  es   es  el   y   \n",
+      "et: ks  õi ee d   on   \n",
+      "eu: oa eta  eta rr tz  \n",
+      "fa:  د ای د  ه  ی   \n",
+      "fi: oi aa  aa tä ä   \n",
+      "fr: d&a d&ap d& est  ou  \n",
+      "fr-ca:  d   &  l   &a  &ap  \n",
+      "gl:  e   unh unh unha xe  \n",
+      "he:  מ  א ם   ה ה   \n",
+      "hi: है े   ह ं   क  \n",
+      "hr: vje ij dje ije je  \n",
+      "hu: és k   a  gy sz  \n",
+      "hy: ի  ան  ա ն  ու  \n",
+      "id: an an  ah  ya   ini  \n",
+      "it:  di  i   è  è  è   \n",
+      "ja: した ます です  です す   \n",
+      "ka:  მ  ა ს  ა  ი   \n",
+      "kk: ы  ын ақ ға  қ  \n",
+      "ko: 니다  니다 는  요  다   \n",
+      "ku:  ‌  ‌  دە  ئ ە   \n",
+      "lt: į  ą  ai ai  ų   \n",
+      "mk: ува  ова  ов  во  ја  \n",
+      "mn: уу г  н  ээ аа  \n",
+      "mr:  ्  ्  ा  ी   आ  \n",
+      "ms: ia oleh  ial  ia   ia  \n",
+      "my:  ။ ။  ်   ်   ်  \n",
+      "nb: eg  kk   å  å  å   \n",
+      "nl: oo oe ij ee aa  \n",
+      "pl: ie zy dz ę  cz  \n",
+      "pt: -se  ámos -me   o   a   \n",
+      "pt-br: eu   um ão  ão  é   \n",
+      "ro:  în în ul   î ă   \n",
+      "ru: эт ь   эт  э ы   \n",
+      "sk: ov  v   sa  ú  ť   \n",
+      "sl:  so   v  jo  v   in   \n",
+      "sq:  te  sht dh sh ë   \n",
+      "sr:  ј  је  da  је  је  \n",
+      "sv: ör  och  ä är  är  \n",
+      "ta:  க ு   ்   ் ்   \n",
+      "th:  ้  ้  ่   ่   ่  \n",
+      "tr: iy  bir bir ın ı   \n",
+      "uk:  це   ц ні ві і   \n",
+      "ur:  ک ہ   ہ ں  ے   \n",
+      "vi:  c ng  ng nh  đ  \n",
+      "zh: 佢哋  我哋  呢  佢 我哋  \n",
+      "zh-cn: 他们  我们 一个  这 我们  \n",
+      "zh-tw: 他們 一個  我們  這 我們  \n",
+      "Wall time: 1h 26min 52s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "for i, lang in enumerate(label_encoder.classes_):\n",
+    "    print(lang + \":\", end=\" \")\n",
+    "    array = pipe[\"model\"].coef_[i].argsort()[-5:]\n",
+    "    for ind in array:\n",
+    "        print(pipe[\"vectorizer\"].get_feature_names()[ind], end = \" \")\n",
+    "    print(\" \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Прогоним тестовые данные"
    ]
   },
